# shared_memory

./: CMakeLists.txt
include/: glob_types.h
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
